MDEV-34813 A simple implementation of ha_partition::compare_key_parts

Similar to can_convert_nocopy